bdr.BDR.scala.error
Erreur de compilation :
BDR:4: error: not found: value message
  message = litMessage()
  ^BDR:5: error: not found: value message
  if (message == "")
      ^BDR:9: error: not found: value message
  else if (message == "R")
           ^BDR:14: error: not found: value message
  else if (message == "L")
           ^BDR:19: error: not found: value message
  else if (message = "I")
           ^BDR:25: error: not found: value message
  else if (message == "A")
           ^BDR:27: error: not found: value message
  else if (message == "B")
           ^BDR:32: error: not found: value message
  else if (message == "C")
           ^BDR:38: error: not found: value message
  else if (message == "Z")
           ^BDR:40: error: not found: value message
  else if (message == "Y")
           ^BDR:45: error: not found: value message
  else if (message == "X")
           ^